@@ -33,9 +33,11 @@
   - change:  FHEMWEB support for the new www/pgm2 directroy added (M. Fischer)
   - change:  Makefile support for for the new www/pgm2 directroy and new targets
              backup and uninstall added. More verbose output. (M. Fischer)
+  - change:  backuproutine separated from updatefhem to a new command (M. Fischer)
   - feature: new command backup added (M. Fischer)
-  - feature: new global attribute <backupsymlink> added
-  - feature: new global attribute <backupcmd> added
+             new global attribute <backupsymlink> added
+             new global attribute <backupcmd> added
+             new global attribute <backup_before_update> added
 
 - 2011-12-31 (5.2)
   - bugfix:  applying smallscreen attributes to firefox/opera
